{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 52,
  "lineage": "f7c3d8e6-efca-7d62-4fbd-2dab151c3e14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087435332110:internet-gateway/igw-0562d417650a5d67c",
            "id": "igw-0562d417650a5d67c",
            "owner_id": "087435332110",
            "tags": {
              "Name": "lennon-igw"
            },
            "tags_all": {
              "Name": "lennon-igw"
            },
            "vpc_id": "vpc-0afc10a73c140df58"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087435332110:route-table/rtb-0e0e38c0b18b8a07a",
            "id": "rtb-0e0e38c0b18b8a07a",
            "owner_id": "087435332110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0562d417650a5d67c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lennon-rtb"
            },
            "tags_all": {
              "Name": "lennon-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afc10a73c140df58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00899507255d694df",
            "route_table_id": "rtb-0e0e38c0b18b8a07a",
            "subnet_id": "subnet-0e74585c1e29097b3"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0804df00d7f96ac57",
            "route_table_id": "rtb-0e0e38c0b18b8a07a",
            "subnet_id": "subnet-0a2e50054c7174dec"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087435332110:security-group/sg-092033fd7c13f97ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092033fd7c13f97ae",
            "ingress": [],
            "name": "terraform-20240603222156616700000001",
            "name_prefix": "terraform-",
            "owner_id": "087435332110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lennon-sg"
            },
            "tags_all": {
              "Name": "lennon-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afc10a73c140df58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087435332110:subnet/subnet-0e74585c1e29097b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e74585c1e29097b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "087435332110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lennon-subnet-0"
            },
            "tags_all": {
              "Name": "lennon-subnet-0"
            },
            "vpc_id": "vpc-0afc10a73c140df58"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087435332110:subnet/subnet-0a2e50054c7174dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2e50054c7174dec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "087435332110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lennon-subnet-1"
            },
            "tags_all": {
              "Name": "lennon-subnet-1"
            },
            "vpc_id": "vpc-0afc10a73c140df58"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087435332110:vpc/vpc-0afc10a73c140df58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0221145c6873713a5",
            "default_route_table_id": "rtb-05de82d85651f61a6",
            "default_security_group_id": "sg-05ffb813efb6d24d0",
            "dhcp_options_id": "dopt-08976423845f32a3a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afc10a73c140df58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05de82d85651f61a6",
            "owner_id": "087435332110",
            "tags": {
              "Name": "lennon-vpc"
            },
            "tags_all": {
              "Name": "lennon-vpc"
            }
          }
        }
      ]
    }
  ]
}